--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="app">
     <a href="https://vite.dev" target="_blank">
-      <img src="./public/vite.svg" class="logo" alt="Vite logo" />
+      <img src="/vite.svg" class="logo" alt="Vite logo" />
     </a>
     <a href="https://www.typescriptlang.org/" target="_blank">
       <img src="./src/typescript.svg" class="logo vanilla" alt="TypeScript logo" />
