--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
       <h2>設定</h2>
       <div class="flex-horizontal">
         <div>
-          <h3>デッキA</h3>
-          <textarea id="deckA" rows="20" cols="80"></textarea>
+          <h3>デッキ0</h3>
+          <textarea id="deck0" rows="20" cols="50"></textarea>
         </div>
         <div>
-          <h3>デッキB</h3>
-          <textarea id="deckB" rows="20" cols="80"></textarea>
+          <h3>デッキ1</h3>
+          <textarea id="deck1" rows="20" cols="50"></textarea>
         </div>
       </div>
     </div>
     <div>
       <h2>実行</h2>
+      <input id="simulationCount"/>回
       <button id="buttonSimulation">シミュレーション</button>
     </div>
     <div>
       <h2>シミュレーション結果</h2>
-      <div id="simulationResult"></div>
+      <textarea id="simulationResult" rows="80" cols="120"></textarea>
     </div>
   </div>
   <script type="module" src="/src/main.ts"></script>
